@@ -1,6 +1,7 @@
 Version - 2.7 - 
 -Modified probAnc documetentation so that indirect descendant examples are shown
 -Modified probAnc so that calculated NaN values are replaced with zero and a message is printed
+-Added name and length checks to horizonSampRate, and code to resort names so they match if not input correctly
 -
 
 Version - 2.6 - 12-01-15
